--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,9 @@
             <li>
               <a href="/about">About</a>
             </li>
+			<li>
+              <a href="/tags">Tags</a>
+            </li>
           </ul>
           <p>&copy; 2015 {{ site.author.name }} </p>
         </div>
