--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 <div class="post">
   <h1>{{ page.title }}</h1>
   <span class="post-date">{{ page.date | date_to_string}}  {% for tag in page.tags %} 
-<a href="/tags#{{tag}}-ref">&nbsp;<span style="text-transform: uppercase">{{tag}}</span></a>
+<a href="/tags#{{tag}}-ref">&nbsp;<span style="text-transform: uppercase; color:#058">{{tag}}</span></a>
 {% endfor %}</span>
   {{ content }}
 </div>
