--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -175,11 +175,27 @@ blockquote p:after {
   content: '\201D';
 }
 
+img[src*='#mid']{ 
+  align-self: center;
+  display: block;
+  margin: auto;
+  border-radius: 5px; }
+
+img[src*='#mid'] + em{ 
+  text-align: center;
+  display: block;
+  margin: auto;
+  border-radius: 5px; 
+}
+
+
+
 img {
   display: block;
   margin: 0 0 15px;
   border-radius: 5px;
 }
+
 
 
 /*
