--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: default
 {% endfor %}</span>
   {{ content }}
 </div>
-{% if page.comments %}
+{% if site.comments %}
 <div id="disqus_thread"></div>
 <script>
 
@@ -33,7 +33,7 @@ s.setAttribute('data-timestamp', +new Date());
 {% endif %}
 
 <div class="related">
-  <h2>Related Posts</h2>
+  <h2>Recent Posts</h2>
   <ul class="related-posts">
     {% for post in site.related_posts limit:3 %}
       <li>
