--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -98,10 +98,17 @@ ul, ol {
 
 hr {
   position: relative;
-  margin: 40px 0;
+  margin: 10px 0;
   border: 0;
   border-top: 1px solid #eee;
-  border-bottom: 1px solid #fff;
+  border-bottom: 1px solid #058;
+}
+hr.article_separator {
+  position: relative;
+  margin: 40px 0;
+  border: 0 none;
+  height: 2px;
+  background-color: #141414;
 }
 
 strong {
