Excerpts and comment changes

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,7 +7,7 @@ layout: default
   {{ content }}
 </div>
 
-{% if site.comments %}
+{% if page.comments %}
 <div id="disqus_thread"></div>
 <script>
 
