--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -108,7 +108,7 @@ hr.article_separator {
   margin: 40px 0;
   border: 0 none;
   height: 4px;
-  background-color: #058;
+  background-color: #ccc;
 }
 
 strong {
