Initializing the blog

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,6 @@
 
 <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
-
   <body>
 
     <header class="masthead">
@@ -25,7 +24,8 @@
               <a href="/tags">Tags</a>
             </li>
           </ul>
-          <p>&copy; 2017 {{ site.author.name }} </p>
+          <!--<p>&copy; 2018 {{ site.author.name }} </p>-->
+		  <p>&copy; 2018 Dushyant Mehta, Tianqi Fan </p>
         </div>
       </div>
     </header>
