--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,8 +5,8 @@ layout: default
 <div class="post">
   <h1>{{ page.title }}</h1>
   <span class="post-date">{{ page.date | date_to_string}}  {% for tag in page.tags %} 
-<a href="/tags#{{tag}}-ref">&nbsp;<span style="text-transform: uppercase; color:#058">{{tag}}</span></a>
-{% endfor %}</span>
+<a href="/tags#{{tag}}-ref">&nbsp;&nbsp;&nbsp;<span style="text-transform: uppercase; color:#058">{{tag}}</span></a>
+{% endfor %}&nbsp;&nbsp; by {{page.author}}</span> 
   {{ content }}
 </div>
 
