--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -204,7 +204,6 @@ img {
 }
 
 
-
 /*
  * Custom type
  *
@@ -426,6 +425,32 @@ a:focus {
   background-color: #f5f5f5;
 }
 
+.mbtablestyle{
+        border-collapse: collapse;
+        border: 1px solid black;
+
+}
+.mbtablestyle table, td, th {
+        border: 1px solid black;
+}
+
+.figtablestyle{
+        border-collapse: collapse;
+        border: none;
+}
+.figtablestyle table, td, th {
+        border-collapse: collapse;
+        border: none;
+}
+
+.figcenter{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+.figcenter > img {
+    margin: auto;
+}
 
 /*
  * Reverse layout
