--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -84,7 +84,11 @@ h3 {
   margin-top: 24px;
   font-size: 24px;
 }
-h4, h5, h6 {
+h4 {
+  margin-top: 16px;
+  font-size: 20px;
+}
+h5, h6 {
   margin-top: 16px;
   font-size: 16px;
 }
@@ -292,7 +296,7 @@ a:focus {
     padding: 40px;
   }
 }
-@media (min-width: 990px) {
+@media (min-width: 1090px) {
   /* Fix the masthead to the side for impact and awesomeness */
   .masthead {
     position: fixed;
@@ -309,7 +313,7 @@ a:focus {
     left: 0;
   }
   .masthead h1 {
-    font-size: 64px;
+    font-size: 60px;
   }
   .colophon {
     margin-top: 40px;
@@ -328,7 +332,7 @@ a:focus {
 }
 
 /* Center container in available real estate */
-@media (min-width: 990px) {
+@media (min-width: 1090px) {
   .content {
     padding: 60px 0;
   }
