Some updates after a looooooooooong time

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
             </li>
           </ul>
           <!--<p>&copy; 2018 {{ site.author.name }} </p>-->
-		  <p>&copy; 2018 Dushyant Mehta, Tianqi Fan </p>
+		  <p>&copy; 2020 Dushyant Mehta</p>
         </div>
       </div>
     </header>
